--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Junior Fitness classes for kids">
+    <meta name="keywords" content="junior, fitness, classes, wexford, ireland">
     <title>Document</title>
 </head>
 <body>
