create heading and links to 3 main pages

--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,11 @@
     <meta name="keywords" content="junior, fitness, classes, wexford, ireland">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Contact Us</title>
 </head>
 <body>
-    
+    <header>
+        <a href="contact.html">Contact</a>
+    </header>
 </body>
 </html>
