--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <meta name="keywords" content="junior, fitness, classes, wexford, ireland">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Homepage</title>
 </head>
 <body>
+    <header>
+        <a href="index.html">
+            <h1>Junior Fitness</h1>
+        </a>
+    </header>
     
 </body>
 </html>
