--- a/classes.html
+++ b/classes.html
@@ -8,9 +8,11 @@
     <meta name="keywords" content="junior, fitness, classes, wexford, ireland">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Classes</title>
 </head>
 <body>
-    
+    <header>
+        <a href="classes.html">CLASSES</a>
+    </header>
 </body>
 </html>
