--- a/classes.html
+++ b/classes.html
@@ -8,11 +8,39 @@
     <meta name="keywords" content="junior, fitness, classes, wexford, ireland">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Classes</title>
+    <title>Homepage</title>
 </head>
 <body>
     <header>
-        <a href="classes.html">CLASSES</a>
+        <a href="index.html">
+            <h1 id="title">Junior Fitness</h1>
+        </a>
+        <nav>
+            <u id="menu">
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+                <li>
+                    <a href="classes.html">Classes</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+            </u>
+        </nav>
     </header>
+
+    <section>
+      
+    </section>
+
+    <section>
+
+    </section>
+
+    <footer>
+
+    </footer>
+    
 </body>
 </html>
