--- a/index.html
+++ b/index.html
@@ -13,9 +13,34 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Junior Fitness</h1>
+            <h1 id="title">Junior Fitness</h1>
         </a>
+        <nav>
+            <u id="menu">
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+                <li>
+                    <a href="classes.html">Classes</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+            </u>
+        </nav>
     </header>
+
+    <section>
+      
+    </section>
+
+    <section>
+
+    </section>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
