add homepage image and text inside image and style

--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
     </header>
 
     <section>
-      
+      <div id="homepage-image">
+        <img src="assets/images/homepage-image.jpg" alt="Image of a kids class running">
+        <div id="cover-text">
+            <h2>Junior Fitness</h2>
+            <h3>Your Kids health is there wealth</h3>
+        </div>
+      </div>
     </section>
 
     <section>
