--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
         </div>
       </div>
     </section>
-
     <section>
-
+       <h2>Why Start Your Kids Fitness Journey?</h2>
+       <div><h3>Teamwork</h3></div>
+       <div><h3>Self-Confidence</h3></div>
+       <div><h3>Frienship</h3></div>
+       <div><h3>Health</h3></div>
     </section>
-
     <footer>
         <span>Find us on:</span>
 		<a href="https://www.facebook.com" target="_blank" rel="noopener" 
