add club ethos headings and text

--- a/index.html
+++ b/index.html
@@ -39,12 +39,24 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="club-ethos">
        <h2>Why Start Your Kids Fitness Journey?</h2>
-       <div><h3>Teamwork</h3></div>
-       <div><h3>Self-Confidence</h3></div>
-       <div><h3>Frienship</h3></div>
-       <div><h3>Health</h3></div>
+       <div class="club-points">
+        <h3>Teamwork</h3>
+        <p>Your kid's learns to work in a team</p>
+       </div>
+       <div class="club-points">
+        <h3>Self-Confidence</h3>
+        <p>Build up confidence in your child to tackle difficult situations</p>
+       </div>
+       <div class="club-points">
+        <h3>Frienship</h3>
+        <p>Create friendships your kid's will have for years</p>
+       </div>
+       <div class="club-points">
+        <h3>Health</h3>
+        <p>Ensure's your child has healthy and happy life</p>
+       </div>
     </section>
     <footer>
         <span>Find us on:</span>
