add skeleton html for classes page

--- a/classes.html
+++ b/classes.html
@@ -11,7 +11,7 @@
     <title>Homepage</title>
 </head>
 <body>
-    <header>
+    <header class="head-align">
         <a href="index.html">
             <h1 id="title">Junior Fitness</h1>
         </a>
@@ -31,11 +31,18 @@
     </header>
 
     <section>
-      
+      <div>Yoga</div>
+      <div>Swimming</div>
     </section>
 
     <section>
+      <div>Soccer</div>
+      <div>Running</div>
+    </section>
 
+    <section>
+        <div>Basketball</div>
+        <div>Play Date</div>
     </section>
 
     <footer>
