--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <title>Homepage</title>
 </head>
 <body>
-    <header>
+    <header class="head-align">
         <a href="index.html">
             <h1 id="title">Junior Fitness</h1>
         </a>
