add flexbox, content and styling for classes page

--- a/classes.html
+++ b/classes.html
@@ -30,20 +30,64 @@
         </nav>
     </header>
 
-    <section>
-      <div>Yoga</div>
-      <div>Swimming</div>
+    <section class="columns">
+      <div id="yoga">
+       <h2>Yoga</h2>
+       <ul>
+        <li>Monday</li>
+        <li>09:00</li>
+        <li>Yoga Studio</li>
+        <li>Wexford</li>
+       </ul>
+      </div>
+      <div id="swimming">
+        <h2>Swimming</h2>
+        <ul>
+            <li>Tuesday</li>
+            <li>10:00</li>
+            <li>Swimming Room</li>
+            <li>Wexford</li>
+        </ul>
+      </div>
+      <div id="soccer">
+        <h2>Soccer</h2>
+        <ul>
+            <li>Wednesday</li>
+            <li>09:30</li>
+            <li>Soccer Field</li>
+            <li>Wexford</li>
+        </ul>
+      </div>
+      <div id="running">
+        <h2>Running</h2>
+        <ul>
+            <li>Thursday</li>
+            <li>10:00</li>
+            <li>Running Track</li>
+            <li>Wexford</li>
+        </ul>
+      </div>
+      <div id="basketball">
+        <h2>Basketball</h2>
+        <li>Friday</li>
+        <li>09:00</li>
+        <li>Basketball Hall</li>
+        <li>Wexford</li>
+      </div>
+      <div id="playdate">
+        <h2>Play Date</h2>
+        <ul>
+         <li>Saturday</li>
+         <li>11:00</li>
+         <li>Min Ryan Park</li>
+         <li>All Welcome</li>
+         <li>Wexford</li>
+         </ul>
+
+      </div>
     </section>
 
-    <section>
-      <div>Soccer</div>
-      <div>Running</div>
-    </section>
-
-    <section>
-        <div>Basketball</div>
-        <div>Play Date</div>
-    </section>
+   
 
     <footer>
         <span>Find us on:</span>
