add contact form skeleton code

--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,25 @@
     </header>
 
     <section>
-      
-    </section>
-
-    <section>
-
+      <form>
+        <div class="input-group">
+            <input type="text" id="name" required>
+            <label for="name">Your Name</label>
+        </div>
+        <div class="input-group">
+            <input type="text" id="number" required>
+            <label for="number">Phone No.</label>
+        </div>
+        <div class="input-group">
+            <input type="email" id="email" required>
+            <label for="email">Email</label>
+        </div>
+        <div class="input-group">
+            <textarea id="message" rows="8"></textarea>
+            <label for="message">Your Message</label>
+        </div>
+        <button type="submit">SUBMIT</button>
+      </form>
     </section>
 
     <footer>
