add hero image and center form content

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
 
-    <section>
+    <section class="hero">
       <form>
         <div class="input-group">
             <input type="text" id="name" required>
