add style to form content

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,8 @@
     </header>
 
     <section class="hero">
-      <form>
+      <form class="signup-form">
+        <h2>Sign your kids up!</h2>
         <div class="input-group">
             <input type="text" id="name" required>
             <label for="name">Your Name</label>
