classes page changed div added for card layout

--- a/classes.html
+++ b/classes.html
@@ -33,24 +33,29 @@
 
     <section class="columns">
       <div id="yoga">
-       <h2>Yoga</h2>
-       <ul>
-        <li>Monday</li>
-        <li>09:00</li>
-        <li>Yoga Studio</li>
-        <li>Wexford</li>
-       </ul>
+       <div class="yoga-container">
+        <h2>Yoga</h2>
+        <ul>
+          <li>Monday</li>
+          <li>09:00</li>
+          <li>Yoga Studio</li>
+          <li>Wexford</li>
+        </ul>
+       </div>
       </div>
       <div id="swimming">
-        <h2>Swimming</h2>
-        <ul>
+        <div class="swimming-container">
+         <h2>Swimming</h2>
+         <ul>
             <li>Tuesday</li>
             <li>10:00</li>
             <li>Swimming Room</li>
             <li>Wexford</li>
-        </ul>
+         </ul>
+        </div>
       </div>
       <div id="soccer">
+        <div class="soccer-container">
         <h2>Soccer</h2>
         <ul>
             <li>Wednesday</li>
@@ -58,8 +63,10 @@
             <li>Soccer Field</li>
             <li>Wexford</li>
         </ul>
+        </div>
       </div>
       <div id="running">
+        <div class="running-container">
         <h2>Running</h2>
         <ul>
             <li>Thursday</li>
@@ -67,15 +74,19 @@
             <li>Running Track</li>
             <li>Wexford</li>
         </ul>
+        </div>
       </div>
       <div id="basketball">
+       <div class="basketball-container">
         <h2>Basketball</h2>
         <li>Friday</li>
         <li>09:00</li>
         <li>Basketball Hall</li>
         <li>Wexford</li>
+       </div>
       </div>
       <div id="playdate">
+        <div class="playdate-container">
         <h2>Play Date</h2>
         <ul>
          <li>Saturday</li>
@@ -84,7 +95,7 @@
          <li>All Welcome</li>
          <li>Wexford</li>
          </ul>
-
+        </div> 
       </div>
     </section>
 
