add classes pictures and use flex for position

--- a/classes.html
+++ b/classes.html
@@ -32,8 +32,10 @@
     </header>
 
     <section class="columns">
-      <div id="yoga">
-       <div class="yoga-container">
+     <div class="flex-one">   
+      <div class="card">
+        <img src="assets/images/yoga.jpg" alt="Kids Doing Yoga">
+       <div class="container">
         <h2>Yoga</h2>
         <ul>
           <li>Monday</li>
@@ -43,8 +45,9 @@
         </ul>
        </div>
       </div>
-      <div id="swimming">
-        <div class="swimming-container">
+      <div class="card">
+        <img src="assets/images/swimming.jpg" alt="Boy Swimming">
+        <div class="container">
          <h2>Swimming</h2>
          <ul>
             <li>Tuesday</li>
@@ -54,8 +57,9 @@
          </ul>
         </div>
       </div>
-      <div id="soccer">
-        <div class="soccer-container">
+      <div class="card">
+        <img src="assets/images/soccer.jpg" alt="Boy About To Take Free Kick">
+        <div class="container">
         <h2>Soccer</h2>
         <ul>
             <li>Wednesday</li>
@@ -65,8 +69,11 @@
         </ul>
         </div>
       </div>
-      <div id="running">
-        <div class="running-container">
+     </div> 
+     <div class="flex-two">
+      <div class="card">
+        <img src="assets/images/running.jpg" alt="Kids Running">
+        <div class="container">
         <h2>Running</h2>
         <ul>
             <li>Thursday</li>
@@ -76,8 +83,9 @@
         </ul>
         </div>
       </div>
-      <div id="basketball">
-       <div class="basketball-container">
+      <div class="card">
+        <img src="assets/images/basketball.jpg" alt="Kids Playing Basketball">
+       <div class="container">
         <h2>Basketball</h2>
         <li>Friday</li>
         <li>09:00</li>
@@ -85,8 +93,9 @@
         <li>Wexford</li>
        </div>
       </div>
-      <div id="playdate">
-        <div class="playdate-container">
+      <div class="card">
+        <img src="assets/images/playdate.jpg" alt="Kids At A Playdate">
+        <div class="container">
         <h2>Play Date</h2>
         <ul>
          <li>Saturday</li>
@@ -97,6 +106,7 @@
          </ul>
         </div> 
       </div>
+     </div> 
     </section>
 
    
