--- a/classes.html
+++ b/classes.html
@@ -114,12 +114,15 @@
     <footer>
         <span>Find us on:</span>
 		<a href="https://www.facebook.com" target="_blank" rel="noopener" 
-        aria-label="Find us on Facebook (link opens in a new tab)">Facebook</a>
+        aria-label="Find us on Facebook (link opens in a new tab)">Facebook <i class="fa-brands fa-facebook"></i></a>
 		<a href="https://www.instagram.com" target="_blank" rel="noopener" 
-        aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
+        aria-label="Find us on Instagram (link opens in a new tab)">Instagram <i class="fa-brands fa-instagram"></i></a>
 		<a href="https://www.twitter.com" target="_blank" rel="noopener" 
-        aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
+        aria-label="Find us on Twitter (link opens in a new tab)">Twitter <i class="fa-brands fa-twitter"></i></a>
     </footer>
-    
+
+      <!--font awesome script-->
+      <script src="https://kit.fontawesome.com/7e006ab397.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
