--- a/index.html
+++ b/index.html
@@ -41,33 +41,36 @@
       </div>
     </section>
     <section class="club-ethos">
-       <h2>Why Start Your Kids Fitness Journey?</h2>
+       <h2>Why Start Your Kid's Fitness Journey?</h2>
        <div class="club-points">
         <h3>Teamwork</h3>
-        <p>Your kid's learns to work in a team</p>
+        <p>Your kid's learn to work in a team.</p>
        </div>
        <div class="club-points">
         <h3>Self-Confidence</h3>
-        <p>Build up confidence in your child to tackle difficult situations</p>
+        <p>Build up confidence in your child to tackle difficult situations.</p>
        </div>
        <div class="club-points">
-        <h3>Frienship</h3>
-        <p>Create friendships your kid's will have for years</p>
+        <h3>Friendship</h3>
+        <p>Create friendships your kid's will have for years.</p>
        </div>
        <div class="club-points">
         <h3>Health</h3>
-        <p>Ensure's your child has healthy and happy life</p>
+        <p>Ensure's your child has healthy and happy life.</p>
        </div>
     </section>
     <footer>
         <span>Find us on:</span>
 		<a href="https://www.facebook.com" target="_blank" rel="noopener" 
-        aria-label="Find us on Facebook (link opens in a new tab)">Facebook</a>
+        aria-label="Find us on Facebook (link opens in a new tab)">Facebook <i class="fa-brands fa-facebook"></i></a>
 		<a href="https://www.instagram.com" target="_blank" rel="noopener" 
-        aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
+        aria-label="Find us on Instagram (link opens in a new tab)">Instagram <i class="fa-brands fa-instagram"></i></a>
 		<a href="https://www.twitter.com" target="_blank" rel="noopener" 
-        aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
+        aria-label="Find us on Twitter (link opens in a new tab)">Twitter <i class="fa-brands fa-twitter"></i></a>
     </footer>
     
+  <!--font awesome script-->
+  <script src="https://kit.fontawesome.com/7e006ab397.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
