--- a/contact.html
+++ b/contact.html
@@ -35,22 +35,22 @@
       <form class="signup-form">
         <h2>Sign your kids up!</h2>
         <div class="input-group">
-            <label for="name">Your Name</label>
+            <label for="name">Your Name <i class="fa-solid fa-user"></i></label>
             <input type="text" id="name" required>
         </div>
         <div class="input-group">
-            <label for="number">Phone No.</label>
+            <label for="number">Phone No. <i class="fa-solid fa-phone"></i></label>
             <input type="text" id="number" required>
         </div>
         <div class="input-group">
-            <label for="email">Email</label>
+            <label for="email">Email <i class="fa-solid fa-envelope"></i></label>
             <input type="email" id="email" required>
         </div>
         <div class="input-group">
-            <label for="message">Your Message</label>
+            <label for="message">Your Message <i class="fa-regular fa-comment"></i></label>
             <textarea id="message" rows="8"></textarea>
         </div>
-        <button type="submit">SUBMIT</button>
+        <button type="submit">SUBMIT <i class="fa-solid fa-truck-fast"></i></button>
       </form>
     </section>
 
