add text in for testing phase and pictures of validation pass

--- a/classes.html
+++ b/classes.html
@@ -16,7 +16,7 @@
             <h1 id="title">Junior Fitness</h1>
         </a>
         <nav>
-            <u id="menu">
+            <ul id="menu">
                 <li>
                     <a href="index.html">Home</a>
                 </li>
@@ -27,7 +27,7 @@
                     <a href="classes.html">Classes</a>
                 </li>
                 
-            </u>
+            </ul>
         </nav>
     </header>
 
@@ -87,10 +87,12 @@
         <img src="assets/images/basketball.jpg" alt="Kids Playing Basketball">
        <div class="container">
         <h2>Basketball</h2>
+        <ul>
            <li>Friday</li>
            <li>09:00</li>
            <li>Basketball Hall</li>
            <li>Wexford</li>
+        </ul>
        </div>
       </div>
       <div class="card">
