--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1 id="title">Junior Fitness</h1>
         </a>
         <nav>
-            <u id="menu">
+            <ul id="menu">
                 <li>
                     <a href="index.html">Home</a>
                 </li>
@@ -27,7 +27,7 @@
                     <a href="classes.html">Classes</a>
                 </li>
                 
-            </u>
+            </ul>
         </nav>
     </header>
 
