add details for user stories, site aims, typography and bugs

--- a/classes.html
+++ b/classes.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Homepage</title>
 </head>
-<body>
+<body> 
+    <!--Navigation Bar-->
     <header class="head-align">
         <a href="index.html">
             <h1 id="title">Junior Fitness</h1>
@@ -30,7 +31,7 @@
             </ul>
         </nav>
     </header>
-
+    <!--Classes for website-->
     <section class="columns">
      <div class="flex-one">   
       <div class="card">
@@ -112,7 +113,7 @@
     </section>
 
    
-
+    <!--Footer with social media links-->
     <footer>
         <span>Find us on:</span>
 		<a href="https://www.facebook.com" target="_blank" rel="noopener" 
