--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <title>Homepage</title>
 </head>
 <body>
+    <!--Navigation Bar-->
     <header class="head-align">
         <a href="index.html">
             <h1 id="title">Junior Fitness</h1>
@@ -30,7 +31,7 @@
             </ul>
         </nav>
     </header>
-
+    <!--Contact Form-->
     <section class="hero">
       <form class="signup-form" method="POST" action="https://formdump.codeinstitute.net">
         <h2>Sign your kids up!</h2>
@@ -53,7 +54,7 @@
         <button type="submit">SUBMIT <i class="fa-solid fa-truck-fast"></i></button>
       </form>
     </section>
-
+    <!--Footer with social media links-->
     <footer>
         <span>Find us on:</span>
 		<a href="https://www.facebook.com" target="_blank" rel="noopener" 
