--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Homepage</title>
 </head>
 <body>
+    <!--Navigation Bar-->
     <header class="head-align">
         <a href="index.html">
             <h1 id="title">Junior Fitness</h1>
@@ -30,7 +31,7 @@
             </ul>
         </nav>
     </header>
-
+    <!--Homepage image and cover text-->
     <section>
       <div id="homepage-image">
         <img src="assets/images/homepage-image.jpg" alt="Image of a kids class running">
@@ -40,6 +41,7 @@
         </div>
       </div>
     </section>
+    <!--Club Ethos Section-->
     <section class="club-ethos">
        <h2>Why Start Your Kid's Fitness Journey?</h2>
        <div class="club-points">
@@ -59,6 +61,7 @@
         <p>Ensure's your child has healthy and happy life.</p>
        </div>
     </section>
+    <!--Footer with social media links-->
     <footer>
         <span>Find us on:</span>
 		<a href="https://www.facebook.com" target="_blank" rel="noopener" 
